--- a/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-ac00-b098-d0c0-b09c-bc30-acbd.md
+++ b/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-ac00-b098-d0c0-b09c-bc30-acbd.md
@@ -12,6 +12,8 @@
 
 리차드 스톨만은 소프트웨어 상업화에 반대하고 소프트웨어 개발 초기의 상호협력적인 문화로 돌아갈 것을 주장하며 1984년 GNU프로젝트를 주도했고, 이듬해인 1985년 FSF\(프리 소프트웨어 재단\)를 조직하면서, ‘소프트웨어는 공유돼야 하며 프로그래머는 소프트웨어로 돈을 벌어서는 안 된다는 내용의 GNU 선언문을 제정하기도 했고, 이를 지원하기 위해 저작권에 대응하는 카피레프트 운동도 주창했다.![](/assets/a1.jpg)
 
+\*리차드 스톨만
+
 1990년대 들어서면서 인터넷의 보급과 더불어 GNU GPL\(General Public License\)로 배포된 리눅스의 보급으로 자유소프트웨어 운동이 확산됐고, 1998년에는 MS의 웹브라우저인 익스플로러에 밀려 어려움을 겪고 있던 넷츠케이프사가 웹 브라우저 모질라의 소스코드를 공개하는 결정을 하게 됐다.
 
 그 즈음 자유소프트웨어라는 용어에서 오픈소스 소프트웨어로 용어가 변경되는데, 자유란 용어 때문에 일반인들이 무료라고 인식하고 있다는 점, GPL 조항의 엄격성 때문에 소프트웨어 개발이 용이하지 않다는 점을 탈피하기 위해서였다.
