--- a/c624-d508-c18c-c2a4-b7803f.md
+++ b/c624-d508-c18c-c2a4-b7803f.md
@@ -1,58 +1,38 @@
- Chatper 2 : What is Open Source Software?
+Chatper 2 : What is Open Source Software?
 
 =================================
 
-
-
 \#\# 1. 오픈 소스란 무엇인가?
 
+오픈소스란 무엇인가? 오픈소스 소프트웨어는 모두가 읽고 참여하고 수정할 수 있는 소프트웨어이다. 기존의 소스코드들은 개발한 당사자들만이 읽고 편집할 수 있는 권한을 가지고 있었고 코드에 대한 권리를 행사할 수 있었다. 하지만 자유 소프트웨어 운동의 주도자인 리처드 스톨만의 자유 소프트웨어의 개념은 오픈소스 개념의 도입에 큰 영향을 미쳤고 오늘 날의 오픈소스가 되는 기반을 마련했다.
 
+![](/assets/osi_keyhole_300X300_90ppi_0 %281%29.png)
 
- 오픈소스란 무엇인가? 오픈소스 소프트웨어는 모두가 읽고 참여하고 수정할 수 있는 소프트웨어이다. 기존의 소스코드들은 개발한 당사자들만이 읽고 편집할 수 있는 권한을 가지고 있었고 코드에 대한 권리를 행사할 수 있었다. 하지만 자유 소프트웨어 운동의 주도자인 리처드 스톨만의 자유 소프트웨어의 개념은 오픈소스 개념의 도입에 큰 영향을 미쳤고 오늘 날의 오픈소스가 되는 기반을 마련했다.
+오픈 소스, 자유 소프트웨어는 다시 말해 사용자가 소프트웨어를 실행, 복제, 배포의 자유와 함께 학습, 연구, 수정, 개선 등의 자유까지도 모두 포괄하는 것이다. 다음은 자유 소프트웨어 재단에서 설명하는 "자유 소프트웨어"가 포괄하는 4가지 자유이다.
 
-![](/assets/osi_keyhole_300X300_90ppi_0 %281%29.png)
+* 프로그램을 어떠한 목적을 위해서도 실행할 수 있는 자유
 
+* 프로그램의 작동 원리를 연구하고 이를 자신의 필요에 맞게 변경시킬 수 있는 자유
 
+  * 이러한 자유를 위해서는 소스코드에 대한 접근이 선행되어야 한다.
 
- 오픈 소스, 자유 소프트웨어는 다시 말해 사용자가 소프트웨어를 실행, 복제, 배포의 자유와 함께 학습, 연구, 수정, 개선 등의 자유까지도 모두 포괄하는 것이다. 다음은 자유 소프트웨어 재단에서 설명하는 "자유 소프트웨어"가 포괄하는 4가지 자유이다.
+* 이웃을 돕기 위해서 프로그램을 복제하고 배포할 수 있는 자유
 
+* 프로그램을 향상시키고 이를 공동체 전체의 이익을 위해서 다시 환원시킬 수 있는 자유
 
+  * 이러한 자유를 위해서는 소스 코드에 대한 접근이 선행되어야 한다.
 
-- 프로그램을 어떠한 목적을 위해서도 실행할 수 있는 자유
+오픈소스와 다른 소스코드들과의 차이점은 접근성과 향상, 수정 가능성에 있다. 기존의 소스코드들은 -오픈소스가 아닌 소스코드- 오직 그것을 개발한 사람, 팀 혹은 기업들만이 수정할 수 있었다. 이러한 코드들은 배타적 권리의 성향을 띄고 있고 소유권을 가지며 폐쇄적이다. 따라서 이러한 코드들은 저작권의 개념을 가지고 있어 소유권을 가진 이들만이 합법적으로 그 코드들을 변형하고 이용할 수 있는 권한이 있었다. 따라서 그 코드나 프로그램을 이용하기 위해선 변형시키지 않겠다는 동의를 하고 구매하거나 이용할 수 있다.
 
-- 프로그램의 작동 원리를 연구하고 이를 자신의 필요에 맞게 변경시킬 수 있는 자유
+이와 달리 오픈소스 소프트웨어는 프로그램의 코드를 보고 복제하고, 연구하고, 수정하고, 배포할 수 있다. 하지만 연구, 수정, 배포 등의 행위들은 오픈소스 라이선스에 따라 영향을 받는다. 어떤 라이선스는 오픈 소스를 수정하여 이용했을 경우 이 코드 역시 공개해야 한다는 내용을 가지고 있으며, 어떤 라이선스는 비용을 부과하지 않고 해당 소스코드들을 공개해야 한다는 내용을 가지고 있다. 이러한 각각의 오픈소스 라이선스에 따라 이용자들은 다른 형태의 행위를 취해야 한다. 이러한 라이선스를 통해 오픈소스를 이용하며 협동하고 공유할 수 있게 하는 것이다.
 
-  - 이러한 자유를 위해서는 소스코드에 대한 접근이 선행되어야 한다.
+오픈소스 소프트웨어는 프로그래머에게만 좋은 것이 아니다. 프로그래머들은 공개된 소스코드를 통해 배우고 연구할 수 있으며 많은 사람들이 참여해 코드를 수정할 수 있기 때문에 더 견고하고 좋은 프로그램을 만들 수 있고 프로그래머가 아닌 사람들은 이렇게 만들어진 양질의 프로그램들을 이용할 수 있게 된다. 또한 수익구조를 띄고 있지 않기 때문에 무료로 이용할 수 있다는 장점도 있다.
 
-- 이웃을 돕기 위해서 프로그램을 복제하고 배포할 수 있는 자유
-
-- 프로그램을 향상시키고 이를 공동체 전체의 이익을 위해서 다시 환원시킬 수 있는 자유
-
-   - 이러한 자유를 위해서는 소스 코드에 대한 접근이 선행되어야 한다.
-
-
-
- 오픈소스와 다른 소스코드들과의 차이점은 접근성과 향상, 수정 가능성에 있다. 기존의 소스코드들은 -오픈소스가 아닌 소스코드- 오직 그것을 개발한 사람, 팀 혹은 기업들만이 수정할 수 있었다. 이러한 코드들은 배타적 권리의 성향을 띄고 있고 소유권을 가지며 폐쇄적이다. 따라서 이러한 코드들은 저작권의 개념을 가지고 있어 소유권을 가진 이들만이 합법적으로 그 코드들을 변형하고 이용할 수 있는 권한이 있었다. 따라서 그 코드나 프로그램을 이용하기 위해선 변형시키지 않겠다는 동의를 하고 구매하거나 이용할 수 있다.
-
-
-
- 이와 달리 오픈소스 소프트웨어는 프로그램의 코드를 보고 복제하고, 연구하고, 수정하고, 배포할 수 있다. 하지만 연구, 수정, 배포 등의 행위들은 오픈소스 라이선스에 따라 영향을 받는다. 어떤 라이선스는 오픈 소스를 수정하여 이용했을 경우 이 코드 역시 공개해야 한다는 내용을 가지고 있으며, 어떤 라이선스는 비용을 부과하지 않고 해당 소스코드들을 공개해야 한다는 내용을 가지고 있다. 이러한 각각의 오픈소스 라이선스에 따라 이용자들은 다른 형태의 행위를 취해야 한다. 이러한 라이선스를 통해 오픈소스를 이용하며 협동하고 공유할 수 있게 하는 것이다.
-
-
-
- 오픈소스 소프트웨어는 프로그래머에게만 좋은 것이 아니다. 프로그래머들은 공개된 소스코드를 통해 배우고 연구할 수 있으며 많은 사람들이 참여해 코드를 수정할 수 있기 때문에 더 견고하고 좋은 프로그램을 만들 수 있고 프로그래머가 아닌 사람들은 이렇게 만들어진 양질의 프로그램들을 이용할 수 있게 된다. 또한 수익구조를 띄고 있지 않기 때문에 무료로 이용할 수 있다는 장점도 있다.
-
-
-
-
-
---------------------------------------
+---
 
 출처 :
 
-\[그림\] https://opensource.org
+\[그림\] [https://opensource.org](https://opensource.org)
 
-\[자유 소프트웨어의 4가지 자유\]https://www.gnu.org/philosophy/free-sw.html
-
-
+\[자유 소프트웨어의 4가지 자유\] [https://www.gnu.org/philosophy/free-sw.html](https://www.gnu.org/philosophy/free-sw.html)
 
