--- a/c624-d508-c18c-c2a4-b7803f.md
+++ b/c624-d508-c18c-c2a4-b7803f.md
@@ -1,8 +1,8 @@
-Chatper 2 : What is Open Source Software?
+#Chatper 2 : What is Open Source Software?
 
-=================================
+----------
 
-\#\# 1. 오픈 소스란 무엇인가?
+## 1. 오픈 소스란 무엇인가?
 
 오픈소스란 무엇인가? 오픈소스 소프트웨어는 모두가 읽고 참여하고 수정할 수 있는 소프트웨어이다. 기존의 소스코드들은 개발한 당사자들만이 읽고 편집할 수 있는 권한을 가지고 있었고 코드에 대한 권리를 행사할 수 있었다. 하지만 자유 소프트웨어 운동의 주도자인 리처드 스톨만의 자유 소프트웨어의 개념은 오픈소스 개념의 도입에 큰 영향을 미쳤고 오늘 날의 오픈소스가 되는 기반을 마련했다.
 
@@ -32,7 +32,7 @@ Chatper 2 : What is Open Source Software?
 
 출처 :
 
-\[그림\] [https://opensource.org](https://opensource.org)
+[그림] [https://opensource.org](https://opensource.org)
 
 \[자유 소프트웨어의 4가지 자유\] [https://www.gnu.org/philosophy/free-sw.html](https://www.gnu.org/philosophy/free-sw.html)
 
