--- a/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4.md
+++ b/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4.md
@@ -84,3 +84,15 @@ Tom Preston-Werner
 
 \[ [https://ko.wikipedia.org/wiki/켄\_톰프슨](https://ko.wikipedia.org/wiki/켄_톰프슨) \]
 
+* ### 자바\(Java\)
+
+![](/assets/James_Gosling_2008.jpg)
+
+제임스 고슬링
+
+-캐나다의 소프트웨어 개발자
+
+-자바의 창시자
+
+
+
