--- a/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-ac00-b098-d0c0-b09c-bc30-acbd.md
+++ b/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-ac00-b098-d0c0-b09c-bc30-acbd.md
@@ -1,12 +1,19 @@
-> ##### '자유 소프트웨어'라고 불렸던 '오픈소스'라는 개념은 어떤 상황에서 만들어졌을까? 오픈소스의 개념이 나온 시대로 들어가보자.
+#오픈소스가 나타난 배경
 
-“누군가가 나의 등잔의 심지에서 불을 붙여가도 내 등잔의 불은 여전히 빛나고 있습니다.” 미국의 정치가 토머스 제퍼슨이 한 말이다. 이러한 명언은 이후 오픈소스 소프트웨어 생성의 정신적 기초가 됐다.
+**'자유 소프트웨어'라고 불렸던 '오픈소스'라는 개념은 어떤 상황에서 만들어졌을까? 오픈소스의 개념이 나온 시대로 들어가보자.**
+
+> ##### “누군가가 나의 등잔의 심지에서 불을 붙여가도 내 등잔의 불은 여전히 빛나고 있습니다.” 
+-미국의 정치가 토머스 제퍼슨
+
+이러한 명언은 이후 오픈소스 소프트웨어 생성의 정신적 기초가 됐다.
 
 오픈소스 소프트웨어\(Open Source Software, OSS\)란 일반 사용자의 공동연구를 통해 개발, 시험, 개선 작업과 공동연구를 보장하기 위해 해당 소프트웨어의 소스코드가 공개되는 소프트웨어를 말한다.
 
-오픈소스 소프트웨어의 기원은 1980년대로 거슬러 올라간다. 하드웨어 중심 체제로부터 점점 소프트웨어의 비중이 높아지면서 소프트웨어 기업의 소프트웨어에 대한 이용·배포·복제·수정 등에 일정한 제한을 가하려고 하는 추세가 있자, 이러한 ‘독점’ 체제에 반발해 ‘공유’를 주장하는 운동이 리차드 스톨만에 의해 일어났다.
+오픈소스 소프트웨어의 기원은 1980년대로 거슬러 올라간다. 하드웨어 중심 체제로부터 점점 소프트웨어의 비중이 높아지면서 소프트웨어 기업의 소프트웨어에 대한 이용·배포·복제·수정 등에 일정한 제한을 가하려고 하는 추세가 있자, 이러한 **__‘독점’__** 체제에 반발해 **__‘공유’__**를 주장하는 운동이 리차드 스톨만에 의해 일어났다.
 
-리차드 스톨만은 소프트웨어 상업화에 반대하고 소프트웨어 개발 초기의 상호협력적인 문화로 돌아갈 것을 주장하며 1984년 GNU프로젝트를 주도했고, 이듬해인 1985년 FSF\(프리 소프트웨어 재단\)를 조직하면서, ‘소프트웨어는 공유돼야 하며 프로그래머는 소프트웨어로 돈을 벌어서는 안 된다는 내용의 GNU 선언문을 제정하기도 했고, 이를 지원하기 위해 저작권에 대응하는 카피레프트 운동도 주창했다.![](/assets/a1.jpg)
+리차드 스톨만은 소프트웨어 상업화에 반대하고 소프트웨어 개발 초기의 상호협력적인 문화로 돌아갈 것을 주장하며 1984년 GNU프로젝트를 주도했고, 이듬해인 1985년 FSF\(프리 소프트웨어 재단\)를 조직하면서, ‘소프트웨어는 공유돼야 하며 프로그래머는 소프트웨어로 돈을 벌어서는 안 된다는 내용의 GNU 선언문을 제정하기도 했고, 이를 지원하기 위해 저작권에 대응하는 카피레프트 운동도 주창했다.
+
+![리차드 스톨만](/assets/a1.jpg)
 
 \*리차드 스톨만
 
