--- a/c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83.md
+++ b/c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83.md
@@ -1,40 +1,26 @@
-## 오픈소스의 대표작
+오픈소스의 대표작
 
 오픈 소스가 가진 최대 장점은 역시 집단 지성에 의한 빠른 발전일 것이다. 오픈소스로 이루어져 눈에 띄는 발전을 이룩한 프로그램들은 굉장히 다양하다. 그 중 가장 대표적인 예는 운영체제인 [Linux](c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-b205-c2a4.md)일 것이다.
 
-첫번째 예로는 Linux를 들 수 있다. 
+첫번째 예로는 Linux를 들 수 있다.
 
-\#\# 리눅스\(Linux\)란?
+## 리눅스\(Linux\)란?
 
-!\[Linux\]\(http://cfile8.uf.tistory.com/image/25040341580497B733A368\)
-
-
+![](/assets/assets:Linux.jpg)
 
 현재 가장 잘 알려지고 널리 사용되는 오픈 소스 운영체제는
 
-\[Linux\]\(https://www.linux.org/\)입니다. 운영 체제로서 \[Linux\]\(https://www.linux.org/\)는 컴퓨터의 다른 모든 소프트웨어의 기반이 되는 소프트웨어로, 해당 프로그램의 요청을 수신하고 이러한 요청을 컴퓨터의 하드웨어로 중계합니다.
+\[Linux\]\([https://www.linux.org/\)입니다](https://www.linux.org/%29입니다). 운영 체제로서 \[Linux\]\([https://www.linux.org/\)는](https://www.linux.org/%29는) 컴퓨터의 다른 모든 소프트웨어의 기반이 되는 소프트웨어로, 해당 프로그램의 요청을 수신하고 이러한 요청을 컴퓨터의 하드웨어로 중계합니다.
 
-
-
-Windows XP, Windows 7, Windows 8 및 Mac OS X와 ​​마찬가지로 \[Linux\]\(https://www.linux.org/\)는 운영 체제입니다. 운영 체제는 데스크톱 또는 랩톱과 관련된 모든 하드웨어 리소스를 관리하는 소프트웨어입니다. 간단히 말하면 운영 체제는 소프트웨어와 하드웨어 간의 통신을 관리합니다. 운영 체제 \(종종 "OS"라고 합니다\)가 없으면 소프트웨어가 작동하지 않습니다.
-
-
+Windows XP, Windows 7, Windows 8 및 Mac OS X와 ​​마찬가지로 \[Linux\]\([https://www.linux.org/\)는](https://www.linux.org/%29는) 운영 체제입니다. 운영 체제는 데스크톱 또는 랩톱과 관련된 모든 하드웨어 리소스를 관리하는 소프트웨어입니다. 간단히 말하면 운영 체제는 소프트웨어와 하드웨어 간의 통신을 관리합니다. 운영 체제 \(종종 "OS"라고 합니다\)가 없으면 소프트웨어가 작동하지 않습니다.
 
 \#\# 누가 리눅스\(Linux\)를 사용하는가?
 
+이미 알고 있든 없든 이미 Linux를 사용하고있을 것입니다. 사용자 설문 조사에 따라 인터넷상의 웹 페이지 중 1 - 2/3가 \[Linux\]\([https://www.linux.org/\](https://www.linux.org/\)\) 를 실행하는 서버에 의해 생성됩니다.
 
+회사와 개인은 안전하기 때문에 서버용으로 \[Linux\]\([https://www.linux.org/\)를](https://www.linux.org/%29를) 선택하고 Canonical, SUSE 및 Red Hat과 같은 상용 고객을 지원하는 회사뿐만 아니라 대규모 사용자 커뮤니티로부터 우수한 지원을받을 수 있습니다.
 
-이미 알고 있든 없든 이미 Linux를 사용하고있을 것입니다. 사용자 설문 조사에 따라 인터넷상의 웹 페이지 중 1 - 2/3가 \[Linux\]\(https://www.linux.org/\) 를 실행하는 서버에 의해 생성됩니다.
-
-
-
-회사와 개인은 안전하기 때문에 서버용으로 \[Linux\]\(https://www.linux.org/\)를 선택하고 Canonical, SUSE 및 Red Hat과 같은 상용 고객을 지원하는 회사뿐만 아니라 대규모 사용자 커뮤니티로부터 우수한 지원을받을 수 있습니다.
-
-
-
-Android 휴대 전화, 디지털 저장 장치, 개인용 비디오 녹화기, 카메라, 웨어러블 등과 같이 사용자가 소유하고있는 대부분의 장치에서도 \[Linux\]\(https://www.linux.org/\)가 실행됩니다. 귀하의 차량에도 리눅스가 실행되고 있습니다.
-
-
+Android 휴대 전화, 디지털 저장 장치, 개인용 비디오 녹화기, 카메라, 웨어러블 등과 같이 사용자가 소유하고있는 대부분의 장치에서도 \[Linux\]\([https://www.linux.org/\)가](https://www.linux.org/%29가) 실행됩니다. 귀하의 차량에도 리눅스가 실행되고 있습니다.
 
 두번째 예로는 LibreOffice를 들 수 있다. LibreOffice는 MS Office와 같은 오피스 프로그램으로 다양한 문서 작성을 돕는 프로그램이다.
 
