--- a/c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83.md
+++ b/c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83.md
@@ -14,7 +14,7 @@ Linux [입니다](https://www.linux.org/%29입니다). 운영 체제로서 Linux
 
 Windows XP, Windows 7, Windows 8 및 Mac OS X와 ​​마찬가지로 Linux [는](https://www.linux.org/%29는) 운영 체제입니다. 운영 체제는 데스크톱 또는 랩톱과 관련된 모든 하드웨어 리소스를 관리하는 소프트웨어입니다. 간단히 말하면 운영 체제는 소프트웨어와 하드웨어 간의 통신을 관리합니다. 운영 체제 \(종종 "OS"라고 합니다\)가 없으면 소프트웨어가 작동하지 않습니다.
 
-\#\# 누가 리눅스\(Linux\)를 사용하는가?
+## 누가 리눅스\(Linux\)를 사용하는가?
 
 이미 알고 있든 없든 이미 Linux를 사용하고있을 것입니다. 사용자 설문 조사에 따라 인터넷상의 웹 페이지 중 1 - 2/3가 Linux 를 실행하는 서버에 의해 생성됩니다.
 
