--- a/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-ac00-b098-d0c0-b09c-bc30-acbd.md
+++ b/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-ac00-b098-d0c0-b09c-bc30-acbd.md
@@ -1,15 +1,20 @@
-#오픈소스가 나타난 배경
+# 오픈소스가 나타난 배경
 
 **'자유 소프트웨어'라고 불렸던 '오픈소스'라는 개념은 어떤 상황에서 만들어졌을까? 오픈소스의 개념이 나온 시대로 들어가보자.**
 
-> ##### “누군가가 나의 등잔의 심지에서 불을 붙여가도 내 등잔의 불은 여전히 빛나고 있습니다.” 
--미국의 정치가 토머스 제퍼슨
+> ##### “누군가가 나의 등잔의 심지에서 불을 붙여가도 내 등잔의 불은 여전히 빛나고 있습니다.”
+>
+> -미국의 정치가 토머스 제퍼슨
 
 이러한 명언은 이후 오픈소스 소프트웨어 생성의 정신적 기초가 됐다.
 
-오픈소스 소프트웨어\(Open Source Software, OSS\)란 일반 사용자의 공동연구를 통해 개발, 시험, 개선 작업과 공동연구를 보장하기 위해 해당 소프트웨어의 소스코드가 공개되는 소프트웨어를 말한다.
+     오픈소스 소프트웨어\(Open Source Software, OSS\)란 일반 사용자의 공동연구를 통해 개발, 시험, 개선 작업과 공동연구를 보장하기 위해 해당 소프트웨어의 소스코드가 공개되는 소프트웨어를 말한다. 대표적인 오픈소스 소프트웨어로는 최근 안드로이드\(android\) 때문에 모바일 플랫폼으로서 각광을 받고 있는 리눅스 커널\(linux kernel, 점유율 약 50%\), 서버시장의 약 30%의 점유율을 보이고 있는 리눅스 OS, 전세계 웹서버의 60% 이상을 차지하고 있는 아파치\(apache\), DB 분야의 선두주자인 MySQL, 통합개발환경을 제공하는 이클립스\(eclipse\) 등이 있다. 우리나라에서도 이름난 오픈소스 소프트웨어가 있으니, 과거 NHN\(현 네이버\)이 인수해 전세계의 웹콘텐츠 플랫폼 시장의 약 60%를 휩쓸고 있는 익스프레스엔진\(XpressEngine, XE\)이 그것이다.
 
-오픈소스 소프트웨어의 기원은 1980년대로 거슬러 올라간다. 하드웨어 중심 체제로부터 점점 소프트웨어의 비중이 높아지면서 소프트웨어 기업의 소프트웨어에 대한 이용·배포·복제·수정 등에 일정한 제한을 가하려고 하는 추세가 있자, 이러한 **__‘독점’__** 체제에 반발해 **__‘공유’__**를 주장하는 운동이 리차드 스톨만에 의해 일어났다.
+    오픈소스 소프트웨어의 기원은 1980년대로 거슬러 올라간다. 하드웨어 중심 체제로부터 점점 소프트웨어의 비중이 높아지면서 소프트웨어 기업의 소프트웨어에 대한 이용·배포·복제·수정 등에 일정한 제한을 가하려고 하는 추세가 있자, 이러한 **‘독점’** 체제에 반발해 **‘공유’**를 주장하는 운동이 리차드 스톨만에 의해 일어났다. 그 무렵 미국 거대 회사였던 AT&T는 벨연구소를 중심으로 유닉스란 컴퓨터 운영체제를 개발했다. 벨연구소는 유닉스를 개발하는 과정에서 UC 버클리를 비롯한 여러 대학에 몸 담고 있는 연구자들의 도움을 받았다.
+
+​이런 협업이 가능했던 건 AT&T가 1956년 미국 법무부와 맺은 협약 때문이었다. 당시 AT&T는 법무부의 반독점 조사를 더 이상 받지 않는 조건으로 상업적 활동을 제한하는 데 동의했다. 쉽지 않았던 협업이 가능했던 건 그 덕분이었다. 하지만 결국 AT&T는 1982년에 분할된다. 그러자 더 이상 반독점 족쇄를 걱정할 필요가 없어진 AT&T는 유닉스를 더 이상 자유롭게 놔두지 않았다. 외부에서 도움 받은 소스코드는 빼버린 뒤 판매를 시작한 것.
+
+​AT&T의 이 같은 조치는 수 많은 자유소프트웨어론자들을 격분시켰다. 당시 20대 후반 나이로 MIT 인공지능연구소에서 연구원으로 활동하던 스톨만도 그 중 한 명이었다. 스톨만은 1983년말 유닉스를 대체할 소프트웨어 개발을 위한 뉴스그룹을 만들었다. 그리곤 MIT에서 나온 뒤 1984년에 ‘그누 프로젝트’를 시작했다. "그누는 유닉스가 아니다"는 유명한 문장으로 시작되는 '그누 선언문'은 이런 배경에서 탄생했다.
 
 리차드 스톨만은 소프트웨어 상업화에 반대하고 소프트웨어 개발 초기의 상호협력적인 문화로 돌아갈 것을 주장하며 1984년 GNU프로젝트를 주도했고, 이듬해인 1985년 FSF\(프리 소프트웨어 재단\)를 조직하면서, ‘소프트웨어는 공유돼야 하며 프로그래머는 소프트웨어로 돈을 벌어서는 안 된다는 내용의 GNU 선언문을 제정하기도 했고, 이를 지원하기 위해 저작권에 대응하는 카피레프트 운동도 주창했다.
 
