--- a/c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83.md
+++ b/c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83.md
@@ -2,23 +2,12 @@
 
 오픈 소스가 가진 최대 장점은 역시 집단 지성에 의한 빠른 발전일 것이다. 오픈소스로 이루어져 눈에 띄는 발전을 이룩한 프로그램들은 굉장히 다양하다. 그 중 가장 대표적인 예는 운영체제인 [Linux](c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-b205-c2a4.md)일 것이다.
 
-첫번째 예로는 Linux를 들 수 있다. 
-
-## 리눅스\(Linux\)란?
-
 ![Linux](http://cfile8.uf.tistory.com/image/25040341580497B733A368)
 
 
 
-현재 가장 잘 알려지고 널리 사용되는 오픈 소스 운영체제는
+두번째 예로는 [LibreOffice](c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-d504-b808-c624-d53c-c2a4.md)를 들 수 있다. [LibreOffice](c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-d504-b808-c624-d53c-c2a4.md)는 MS Office와 같은 오피스 프로그램으로 다양한 문서 작성을 돕는 프로그램이다.
 
-[Linux](https://www.linux.org)입니다. 운영 체제로서 [Linux](https://www.linux.org/)는 컴퓨터의 다른 모든 소프트웨어의 기반이 되는 소프트웨어로, 해당 프로그램의 요청을 수신하고 이러한 요청을 컴퓨터의 하드웨어로 중계합니다.
-
-
-
-Windows XP, Windows 7, Windows 8 및 Mac OS X와 ​​마찬가지로 [Linux](https://www.linux.org)는 운영 체제입니다. 운영 체제는 데스크톱 또는 랩톱과 관련된 모든 하드웨어 리소스를 관리하는 소프트웨어입니다. 간단히 말하면 운영 체제는 소프트웨어와 하드웨어 간의 통신을 관리합니다. 운영 체제 (종종 "OS"라고 합니다)가 없으면 소프트웨어가 작동하지 않습니다.
-
-
-
+![LibreOffice](https://logosinside.com/uploads/posts/2016-09/libreoffice-logo.png)
 
 
