--- a/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4.md
+++ b/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4.md
@@ -1,5 +1,7 @@
 # 오픈소스에 영향을 끼친 사람들
 
+---
+
 * ### 리눅스
 
 리누스 토르발스
@@ -22,7 +24,9 @@
 
 **자비로운종신독재자**\(BDFL, Benevolent Dictator for Life\)란소수의[오픈소스소프트웨어개발](https://ko.wikipedia.org/w/index.php?title=오픈_소스_소프트웨어_개발&action=edit&redlink=1)리더에게부여되는칭호이다.주로커뮤니티내에서논쟁이있을때최종적으로결론을내려줄수있는,프로젝트창시자인경우가많다.
 
-> > \[ [https://ko.wikipedia.org/wiki/자비로운\_종신독재자](https://ko.wikipedia.org/wiki/자비로운_종신독재자) \]
+\[ [https://ko.wikipedia.org/wiki/자비로운\_종신독재자](https://ko.wikipedia.org/wiki/자비로운_종신독재자) \]
+
+---
 
 * ### 깃 허브\(Git-Hub\)
 
@@ -46,9 +50,11 @@ Tom Preston-Werner
 
 ![](/assets/크리스 완스트래스.png)
 
+&lt;크리스 완스트래스&gt;
+
 \[ [https://www.crunchbase.com/person/chris-wanstrath\#/entity](https://www.crunchbase.com/person/chris-wanstrath#/entity) \]
 
--깃허브회사는2008년톰프레스턴워너\(Tom Preston-Werner\),크리스완스트래스\(Chris Wanstrath\),피제이하이엣\(PJ Hyett\)이공동설립했다.[앤드리슨호로위츠](https://ko.wikipedia.org/wiki/앤드리슨_호로위츠)\(Andreessen Horowitz\)등에서투자를받았다. 2010년1월부터깃허브는GitHub, Inc.라는이름으로운영되고있다.[\[4\]](https://ko.wikipedia.org/wiki/깃허브#cite_note-4)깃허브의마스코트는고양이머리에문어다리가달린옥토캣\(Octocat\)이다.본사는미국캘리포니아주샌프란시스코에있다.
+---
 
 * ### 유닉스\(Unix\)
 
@@ -84,6 +90,8 @@ Tom Preston-Werner
 
 \[ [https://ko.wikipedia.org/wiki/켄\_톰프슨](https://ko.wikipedia.org/wiki/켄_톰프슨) \]
 
+---
+
 * ### 자바\(Java\)
 
 ![](/assets/James_Gosling_2008.jpg)
@@ -93,6 +101,12 @@ Tom Preston-Werner
 -캐나다의 소프트웨어 개발자
 
 -자바의 창시자
+
+-잘 알려지지 않았지만 창시자 가운데에서는 유명한 사람임
+
+
+
+
 
 
 
