--- a/c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83.md
+++ b/c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83.md
@@ -1,13 +1,10 @@
-## 오픈소스의 대표작
+## 3. 오픈소스의 대표작
 
 오픈 소스가 가진 최대 장점은 역시 집단 지성에 의한 빠른 발전일 것이다. 오픈소스로 이루어져 눈에 띄는 발전을 이룩한 프로그램들은 굉장히 다양하다. 그 중 가장 대표적인 예는 운영체제인 [Linux](c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-b205-c2a4.md)일 것이다.
 
 ![Linux](http://cfile8.uf.tistory.com/image/25040341580497B733A368)
 
-
-
 두번째 예로는 [LibreOffice](c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-d504-b808-c624-d53c-c2a4.md)를 들 수 있다. [LibreOffice](c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-d504-b808-c624-d53c-c2a4.md)는 MS Office와 같은 오피스 프로그램으로 다양한 문서 작성을 돕는 프로그램이다.
 
 ![LibreOffice](https://logosinside.com/uploads/posts/2016-09/libreoffice-logo.png)
-
 
