--- a/b05d.md
+++ b/b05d.md
@@ -10,7 +10,7 @@ _-Team red-05_
 
 > 편집 후기
 
-이하영: 막연하게만 알고 있던 오픈소스라는 개념을 잘 알게 되었고, 이것이 얼마나 많은 사람들에 의해 성장해 왔는지 알 수 있는 좋은 기회였다.
+이하영: 막연하게만 알고 있던 오픈소스라는 개념을 잘 알게 되었고, 이것이 얼마나 많은 사람들에 의해 성장해 왔는지 알 수 있는 좋은 기회였다. 앞으로 오픈소스를 직접 경험하게 될텐데 그 전에 공부할 수 있어서 좋았다.
 
 김지우: 사실 조사하면서도 이게 무슨 소리인가 싶은게 참 많기도 했지만 이번 기회 덕분에 전보다는 많이 알아가는 것 같다. 오픈소스 프로그램을 단순히 학문적으로 조사하는 것 뿐만 아니라 실제로 해당 프로그램을 이용하며 '오픈소스적 방식'으로 글을 쓰다보니 오픈소스가 무엇인지 더 생생하게 체감하고 배울 수 있었다.
 
