--- a/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-c758-bc1c-c804-acfc-c815/2000s.md
+++ b/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-c758-bc1c-c804-acfc-c815/2000s.md
@@ -12,7 +12,7 @@
 
 썬 마이크로 시스템즈\(Sun Microsystems, Sun\)는 2008년 오픈 소스 MySQL 데이터베이스의 소유자인 MySQL AB를 인수했고, 오라클은 2010년 1월 썬을 인수하여 저작권, 특허 및 상표권을 취득했다. 이로 인해 오라클은 가장 인기있는 독점적 데이터베이스와 가장 유명한 오픈 소스 데이터베이스\(MySQL\)의 소유자가 되었다.
 
-> 오픈소스 프로그래밍 언어
+> 오픈소스 프로그래밍 언어-Java
 
 현재 사용중인 프로그래밍 언어의 대부분은 무료 소프트웨어 구현을 사용할 수 있다. 1990년대 이래로 오픈 소스 컴파일러 및 인터프리터의 형태로 주요 새로운 프로그래밍 언어가 출시되었다. 예를 들어 1991년의 Python, 1995년의 Ruby, 2003년의 Scala등이 있다. 최근에는 Java, ActionScript, C\# 및 Apple의 Swift가 있다. 부분적으로 호환 가능한 오픈 소스 구현이 대부분 개발되었으며 Java의 경우 주요 오픈 소스 구현이 사용 버전과 매우 비슷하다.
 
