--- a/c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-b205-c2a4.md
+++ b/c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-b205-c2a4.md
@@ -4,15 +4,64 @@
 
 ## 리눅스\(Linux\)란?
 
-* 현재 가장 잘 알려지고 널리 사용되는 오픈 소스 운영체제는[ Linux](https://www.linux.org/)이다. 운영 체제로서 [Linux](https://www.linux.org/)는 컴퓨터의 다른 모든 소프트웨어의 기반이 되는 소프트웨어로, 해당 프로그램의 요청을 수신하고 이러한 요청을 컴퓨터의 하드웨어로 중계한다.
+현재 가장 잘 알려지고 널리 사용되는 오픈 소스 운영체제는[ Linux](https://www.linux.org/)이다. 운영 체제로서 [Linux](https://www.linux.org/)는 컴퓨터의 다른 모든 소프트웨어의 기반이 되는 소프트웨어로, 해당 프로그램의 요청을 수신하고 이러한 요청을 컴퓨터의 하드웨어로 중계한다.
 
-* Windows XP, Windows 7, Windows 8 및 Mac OS X와 ​​마찬가지로 [Linux](https://www.linux.org/)는 운영 체제이다. 운영 체제는 데스크톱 또는 랩톱과 관련된 모든 하드웨어 리소스를 관리하는 소프트웨어를 말한다. 간단히 말해, 운영 체제는 소프트웨어와 하드웨어 간의 통신을 관리하는 것이다. 운영 체제 \(종종 "OS"라고 함\)가 없으면 소프트웨어가 작동하지 않다.
+Windows XP, Windows 7, Windows 8 및 Mac OS X와 ​​마찬가지로 [Linux](https://www.linux.org/)는 운영 체제이다. 운영 체제는 데스크톱 또는 랩톱과 관련된 모든 하드웨어 리소스를 관리하는 소프트웨어를 말한다. 간단히 말해, 운영 체제는 소프트웨어와 하드웨어 간의 통신을 관리하는 것이다. 운영 체제 \(종종 "OS"라고 함\)가 없으면 소프트웨어가 작동하지 않습니다.
 
-## 누가 리눅스\(Linux\)를 사용하는가?
+리눅스는 오픈 소스 라이센스에 따라 배포되기에 오픈소스의 핵심 철학을 따릅니다.
 
-우리는 우리가 모르는 사이에 Linux를 사용하고 있다. 사용자 설문 조사에 따르면, 인터넷 상의 웹 페이지 중 1 - 2/3가 [Linux](https://www.linux.org) 를 실행하는 서버에 의해 생성된다고 한다.
+* 어떤 목적으로든 프로그램을 자유롭게 실행할수있습니다.
+* 프로그램이 어떻게 작동하는지 연구 할 수있는 자유, 그리고 원하는대로 할수 있도록 변경할수있다.
+* 복사본을 재배포하여 남을 도울 수있는 자유가 있다.
+* 수정된 버전의 사본을 다른 사람에게 배포 할 수있는 자유가 있다.
 
-회사와 개인은 안전하기 때문에 서버용으로 [Linux](https://www.linux.org)를 선택하고 Canonical, SUSE 및 Red Hat과 같은 상용 고객을 지원하는 회사뿐만 아니라 대규모 사용자 커뮤니티로부터 우수한 지원을 받을 수 있습니다.
+## 누가 리눅스\(Linux\)를 사용하는가? {#-linux-}
 
-Android 휴대 전화, 디지털 저장 장치, 개인용 비디오 녹화기, 카메라, 웨어러블 등과 같이 사용자가 소유하고 있는 대부분의 장치에서도 [Linux](https://www.linux.org)가 실행된다. 우리의 차량에도 Linux가 이용되고 있는 것이다.
+이미 알고 있든 없든 이미 Linux를 사용하고있을 것입니다. 사용자 설문 조사에 따라 인터넷상의 웹 페이지 중 1 - 2/3가[Linux](https://www.linux.org/)를 실행하는 서버에 의해 생성됩니다.
+
+회사와 개인은 안전하기 때문에 서버용으로[Linux](https://www.linux.org/)를 선택하고 Canonical, SUSE 및 Red Hat과 같은 상용 고객을 지원하는 회사뿐만 아니라 대규모 사용자 커뮤니티로부터 우수한 지원을받을 수 있습니다.
+
+Android 휴대 전화, 디지털 저장 장치, 개인용 비디오 녹화기, 카메라, 웨어러블 등과 같이 사용자가 소유하고있는 대부분의 장치에서도[Linux](https://www.linux.org/)가 실행됩니다. 귀하의 차량에도 리눅스가 실행되고 있습니다.
+
+## 왜 리눅스\(Linux\)를 사용하는가? {#-linux-}
+
+이 질문에 제대로 대답하기 위해서는 한가지의 질문을 드려야합니다.
+
+* 현재 사용중인 운영 체제가 실제로 잘 작동합니까?
+
+혹시 바이러스, 멀웨어, 속도 저하, 충돌, 값 비싼 수리및 라이센스 비용 떄문에 고생하고 계시지는 않으셨나요? 이러한 사항에 대해 고심하고 데이터 손실에 대한 끊임없는 두려움에서 벗어나고 싶거나 "연간 정리"를 위해 컴퓨터를 가져 가야한다면 Linux가 최적의 플랫폼이 될 수 있습니다. Linux는 지구상에서 가장 안정적인 컴퓨터 생태계 중 하나로 발전했습니다. 그 신뢰성과 무결점 비용을 결합하면 탁상용 플랫폼을위한 완벽한 솔루션을 얻을 수 있습니다.
+
+## 리눅스\(Linux\)는 어떻게 만들어졌는가? {#-linux-}
+
+![](http://cfile3.uf.tistory.com/image/2158293455F670971705DD "토발즈")
+
+Linux는 1991 년 헬싱키 대학 \(University of Helsinki\)의 Linus Torvalds가 창안했습니다. 토발즈 \(Tomvalds\)는 리눅스를 학문적 환경에서 주로 사용 된 다른 유닉스 클론 인 Minix에 대한 무료 오픈 소스 대안으로 만들었다. 그는 원래 "Freax"라는 이름을 사용하려고했지만 Torvalds의 관리자는 토발즈의 이름과 Unix라는 단어가 결합 된 후 자신의 디렉토리 "Linux"라는 원래 코드를 배포하는 데 사용되어 이름이 붙어있었습니다.
+
+## 리눅스\(Linux\)를 사용하려면? {#-linux-}
+
+리눅스를 이미 사용하고 있지만 모르는 경우가 있습니다. 가정용 컴퓨터에 Linux를 설치하여 사용하고 싶다면 가장 쉬운 방법은 플랫폼에 맞게 설계된 인기있는 배포판을 선택하는 것입니다. 자신에 맞는 배포판을 사용하기 위해서는 3 가지의 간단한 질문에 대한 대답에 달려있습니다.
+
+* 당신은 컴퓨터 사용자의 숙련 된 기술자입니까?
+* 현대적인 데스크탑 인터페이스를 선호합니까?
+* 서버 혹은 데스크탑?
+
+컴퓨터 기술이 상당히 기초적이라면 Linux Mint, Ubuntu 또는 Deepin과 같은 초보자 친화적 인 배포판을 계속 사용하고 싶을 것입니다. 스킬 셋이 평균 이상으로 확장된다면 데비안이나 페도라 같은 배포판으로 갈 수 있습니다. 그러나 컴퓨터와 시스템 관리의 기술을 거의 마스터했다면 Gentoo 와 같은 배포판을 사용하십시오 .
+
+서버 전용 배포판을 찾고 있다면 데스크탑 인터페이스가 필요한지 또는 명령 줄을 통해서만이 작업을 수행할지 결정할 수도 있습니다. 우분투 서버는 GUI 인터페이스를 설치하지 않습니다. 이것은 두 가지를 의미합니다. 서버가 그래픽을 로딩 할 때 느려지지 않을 것이므로 Linux 명령 행에 대한 확실한 이해가 필요합니다. 그러나 \(항상 "리눅스"가 있습니다\) 우분투 서버 위에 sudo apt-get install 과 같은 명령을 사용하여 GUI 패키지를 설치할 수 있습니다 .시스템 관리자는 기능과 관련된 배포를 볼 수도 있습니다. 서버에 필요한 모든 것을 제공하는 서버 별 배포를 원하십니까? 그렇다면 CentOS가 최선의 선택 일 수 있습니다. 또는 데스크탑 배포판을 사용하고 필요에 따라 조각을 추가하고 싶습니까? 그렇다면 데비안 또는 우분투 리눅스가 잘 서비스 할 수 있습니다.
+
+신규 사용자의 경우 " 새로운 사용자를위한 최상의 Linux 배포판 "을 선택하여 선택 작업을 훨씬 쉽게 할 수 있습니다.
+
+---
+
+출처:[https://opensource.com/resources/linux](https://opensource.com/resources/linux)
+
+[https://www.linux.com/what-is-linux](https://www.linux.com/what-is-linux)
+
+* Git
+* GitHub \(preview\)
+* Git
+* GitHub \(preview\)
+
+  
+
 
