--- a/b05d.md
+++ b/b05d.md
@@ -14,3 +14,5 @@ _-Team red-05_
 
 김지우: 사실 조사하면서도 이게 무슨 소리인가 싶은게 참 많기도 했지만 이번 기회 덕분에 전보다는 많이 알아가는 것 같다. 오픈소스 프로그램을 단순히 학문적으로 조사하는 것 뿐만 아니라 실제로 해당 프로그램을 이용하며 '오픈소스적 방식'으로 글을 쓰다보니 오픈소스가 무엇인지 더 생생하게 체감하고 배울 수 있었다.
 
+권태윤: 아무것도 몰랐던, 또한 알아보려고 노력하지도 않았던 '오픈소스'를 내가 직접 능동적으로 알아가니 확실히 더 기억에 오래남을꺼 같다. 정확한 개념이 안잡혀지던 '오픈소스' 였지만 이 과제를 통해 어느정도 개념을 잡고 가는거 같아 좋았다.
+
