--- a/c624-d508-c18c-c2a4-c758-c7a52c-b2e8-c810.md
+++ b/c624-d508-c18c-c2a4-c758-c7a52c-b2e8-c810.md
@@ -1,2 +1,36 @@
+# 2. 오픈소스의 장단점 {#-}
 
+오픈소스는 양날의 검과 같다고 할수 있다. 장점이 있는 한편 반대로 단점이 있는 면이 존재한다. 이는 어쩔 수없는 사실이며 이번 글에서는 오픈소스의 여러가지 장점과 단점에 대해 간단히 설명하려고 한다.
+
+## 오픈소스의 장점 {#-}
+
+* 무료이거나 또는 저렴하다
+
+당신이 지불하고있는 독점적 인 소프트웨어 패키지의 오픈 소스 버전을 찾는 것은 기업에게 진정한 이익이 될 수 있습니다. 값 비싼 라이센스가 필요없는 운영은 특히 중소기업의 경우 모든면에서 효과적 일 수 있습니다. 오픈 소스 소프트웨어는 매년 기업에 엄청난 돈을 절약합니다.
+
+* 지속적인 개선이 가능하다
+
+오픈 소스 소프트웨어는 개발자가 버그를 수정하고 개조하고 추가 할 때마다 항상 진화하고 있습니다. 개선에 참여하는 대규모 팀이 있으며 모든 사람이 소프트웨어 개선을 위해 주도권을 쥐고 있습니다.
+
+* 사용자가 원하는것을 할수있다
+
+라이센스에 대해 걱정할 필요없이 모든 시스템에 설치할 수있을뿐만 아니라 사용자의 요구에 맞출 수 있습니다. 원하는 경우 수정할 수 있습니다.
+
+* 잠겨 있지 않다
+
+서로 호환되는 제품을 설계하는 공급 업체와 독점 시스템에 얽매이지 않습니다. 또한 공급 업체의 로드맵에서 벗어나므로 항상 필요한 기능을 추가 할 때까지 기다릴 필요가 없습니다. 오픈 소스 소프트웨어는 개별 기업과 독립적이기 때문에 활동적인 커뮤니티가있는 한 원래 창업자가 사업을 중단하거나 버리는 것은 중요하지 않습니다.
+
+## 오픈소스의 단점 {#-}
+
+* 숨겨진 비용이 존재한다
+
+많은 기업들은 오픈 소스 소프트웨어가 무료라는 사실에 처음에 매료되었지만 소프트웨어 배포 및 통합 비용을 고려해야합니다. 지속적인 유지 보수 및 지원 비용도 고려해야합니다.
+
+* 포기의 위험성이 존재한다
+
+주요 프로그래머가 관심을 잃거나 더 이상 프로젝트 작업을 할 시간이 없다면 매우 빨리 포기 될 수 있습니다. 오픈 소스 프로젝트가 가끔씩 사라집니다. 소프트웨어에 많은 투자를했다면 업데이트가 중단되면 심각한 문제가 될 수 있습니다.
+
+* 보안의 위험성이 존재한다
+
+당신은 소프트웨어가 개방되어있는 것이 유익하지만 그것이 다른 사람들에게도 열려 있다는 것을 의미합니다. 악의적 인 사용자는 코드를보고 악용 및 취약점을 찾을 수 있습니다. 회사가 보안 취약성을위한 오픈 소스 코드를 분석하고이를 완화하기위한 조치를 취하지 않으면 안전하다고 생각하는 것은 위험합니다. 보안 위험을 무시하면 심각한 노출로 이어질 수 있습니다.
 
