Track 30 files into repository.
- modified AboutOpenS.md
- removed assets/assets:Linux.jpg
- removed assets/개발자들.jpg
- removed assets/필기체.png
- modified b05d.md
- removed b05d/cc38-ace0-bb38-d5cc-bc0f-cd9c-cc98.md
- modified book.json
- modified c624-d508-c18c-c2a4-b7803f.md
- modified c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83.md
- modified c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-b205-c2a4.md
- modified c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-d504-b808-c624-d53c-c2a4.md
- modified c624-d508-c18c-c2a4-c758-c5ed-c0ac.md
- modified c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-ac00-b098-d0c0-b09c-bc30-acbd.md
- modified c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4.md
- removed c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4/ae43-d5c8-be0c.md
- removed c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4/b9ac-b205-c2a4.md
- removed c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4/c720-b2c9-c2a4.md
- removed c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4/c790-bc14.md
- modified c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-c758-bc1c-c804-acfc-c815.md
- modified c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-c758-bc1c-c804-acfc-c815/1950~1970s.md
- modified c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-c758-bc1c-c804-acfc-c815/1980s.md
- modified c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-c758-bc1c-c804-acfc-c815/1990s.md
- modified c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-c758-bc1c-c804-acfc-c815/2000s.md
- removed c624-d508-c18c-c2a4-c758-c5ed-c0ac/오픈소스의 발전과정
- modified c624-d508-c18c-c2a4-c758-c7a52c-b2e8-c810.md
- modified head.md
- removed opensource-phone.png
- modified README.md
- removed style/website.css
- modified SUMMARY.md

Auto commit by GitBook Editor

--- a/c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-b205-c2a4.md
+++ b/c624-d508-c18c-c2a4-b97c-c0ac-c6a9-d55c-ac83/b9ac-b205-c2a4.md
@@ -1,51 +1,32 @@
-# Linux
+#Linux
 
 ![Linux](http://cfile8.uf.tistory.com/image/25040341580497B733A368)
 
-## 리눅스\(Linux\)란?
 
-현재 가장 잘 알려지고 널리 사용되는 오픈 소스 운영체제는[ Linux](https://www.linux.org/)이다. 운영 체제로서 [Linux](https://www.linux.org/)는 컴퓨터의 다른 모든 소프트웨어의 기반이 되는 소프트웨어로, 해당 프로그램의 요청을 수신하고 이러한 요청을 컴퓨터의 하드웨어로 중계한다.
-
-Windows XP, Windows 7, Windows 8 및 Mac OS X와 ​​마찬가지로 [Linux](https://www.linux.org/)는 운영 체제이다. 운영 체제는 데스크톱 또는 랩톱과 관련된 모든 하드웨어 리소스를 관리하는 소프트웨어를 말한다. 간단히 말해, 운영 체제는 소프트웨어와 하드웨어 간의 통신을 관리하는 것이다. 운영 체제 \(종종 "OS"라고 함\)가 없으면 소프트웨어가 작동하지 않는다.
-
-리눅스는 오픈 소스 라이센스에 따라 배포되기에 오픈소스의 핵심 철학을 따른다.
-
-* 어떤 목적으로든 프로그램을 자유롭게 실행할 수 있다.
-* 프로그램이 어떻게 작동하는지 연구 할 수 있는 자유, 원하는 대로 변경할 자유를 가진다.
-* 복사본을 재배포할 자유를 가진.
-* 수정된 버전의 사본을 다른 사람에게 배포 할 수있는 자유가 있다.
-
-## 누가 리눅스\(Linux\)를 사용하는가? {#-linux-}
-
-우리는 우리가 모르는 사이에 Linux를 사용하고 있다. 사용자 설문 조사에 따르면 인터넷 상의 웹 페이지 중 1 - 2/3가 [Linux](https://www.linux.org/)를 실행하는 서버에 의해 생성된다.
-
-회사와 개인은 안전하기 때문에 서버용으로 [Linux](https://www.linux.org/)를 이용하며, 이 때 Canonical, SUSE 및 Red Hat과 같은 상용 고객을 지원하는 회사뿐만 아니라 대규모 사용자 커뮤니티로부터 우수한 지원을 받을 수 있다.
-
-Android 휴대 전화, 디지털 저장 장치, 개인용 비디오 녹화기, 카메라, 웨어러블 등과 같이 사용자가 소유하고있는 대부분의 장치에서도 [Linux](https://www.linux.org/)가 이용된다.
-
-## 왜 리눅스\(Linux\)를 사용하는가? {#-linux-}
-
-이 질문에 제대로 대답하기 위해서는 한가지의 질문을 보아야 한다.
-
-* 현재 사용중인 운영 체제가 실제로 잘 작동하는가?
-
-바이러스, 멀웨어, 속도 저하, 충돌, 값 비싼 수리 및 라이센스 비용 때문에 불편을 겪고 있었다면, 혹은 데이터 손실에 대한 걱정을 가지고 있다면 Linux가 최적의 운영체제가 될 수 있다. Linux는 가장 안정적인 컴퓨터 생태계 중 하나로 발전해왔기 때문에 그 신뢰성과 무결점 비용이라는 장점이 결합한다면 운영체제의 많은 문제들에 대한 솔루션이 될 수 있을 것이다.
-
-## 리눅스\(Linux\)를 사용하려면? {#-linux-}
-
-리눅스를 이미 사용하고 있지만 모르는 경우가 있다. 가정용 컴퓨터에 Linux를 설치하여 사용하고 싶다면 가장 쉬운 방법은 플랫폼에 맞게 설계된 인기있는 배포판을 선택하는 것이다. 자신에게 맞는 배포판을 찾기 위해서는 다음의 3가지의 간단한 질문을 보면 된다.
-
-* 당신은 컴퓨터 사용자의 숙련된 기술자인가?
-* 현대적인 데스크탑 인터페이스를 선호하는가?
-* 서버 혹은 데스크탑?
-
-컴퓨터 기술이 상당히 기초적이라면 Linux Mint, Ubuntu 또는 Deepin과 같은 초보자 친화적인 배포판을 이용할 수 있으며, 스킬 셋이 평균 이상으로 확장된다면 데비안이나 페도라 같은 배포판을 이용할 수 있다. 그러나 컴퓨터와 시스템 관리의 기술을 거의 마스터했다면 Gentoo 와 같은 배포판이 적합하다 .
-
-서버 전용 배포판을 찾고 있다면 데스크탑 인터페이스가 필요한지 또는 명령 줄만을 통해서 작업을 수행할지에 따라 결정할 수 있다. 우분투 서버는 GUI 인터페이스를 설치하지 않아 서버가 그래픽을 로딩 할 때 느려지지 않지만, Linux 명령 행에 대한 확실한 이해가 필요하다. 하지만 GUI를 이용하기 위해선 우분투 서버 위에 sudo apt-get install 과 같은 명령을 사용하여 GUI 패키지를 설치할 수도 있다 .시스템 관리자는 기능과 관련된 배포를 볼 수도 있다. 서버에 필요한 모든 것을 제공하는 서버 별 배포를 원한다면 CentOS를, 데스크탑 배포판을 사용하고 필요에 따라 조각을 추가하고 싶다면 데비안 또는 우분투 리눅스를 이용할 수 있다.
-
-신규 사용자의 경우 " 새로운 사용자를위한 최상의 Linux 배포판 "을 선택하여 작업을 훨씬 수월하게 할 수 있다.
-
----
+## 리눅스(Linux)란?
 
 
+
+ * 현재 가장 잘 알려지고 널리 사용되는 오픈 소스 운영체제는
+[Linux](https://www.linux.org/)입니다. 운영 체제로서 [Linux](https://www.linux.org/)는 컴퓨터의 다른 모든 소프트웨어의 기반이 되는 소프트웨어로, 해당 프로그램의 요청을 수신하고 이러한 요청을 컴퓨터의 하드웨어로 중계합니다.
+
+ * Windows XP, Windows 7, Windows 8 및 Mac OS X와 ​​마찬가지로 [Linux](https://www.linux.org/)는 운영 체제입니다. 운영 체제는 데스크톱 또는 랩톱과 관련된 모든 하드웨어 리소스를 관리하는 소프트웨어입니다. 간단히 말하면 운영 체제는 소프트웨어와 하드웨어 간의 통신을 관리합니다. 운영 체제 (종종 "OS"라고 함)가 없으면 소프트웨어가 작동하지 않습니다.
+
+## 누가 리눅스(Linux)를 사용하는가?
+
+
+
+이미 알고 있든 없든 이미 Linux를 사용하고있을 것입니다. 사용자 설문 조사에 따라 인터넷상의 웹 페이지 중 1 - 2/3가 [Linux](https://www.linux.org) 를 실행하는 서버에 의해 생성됩니다.
+
+
+
+회사와 개인은 안전하기 때문에 서버용으로 [Linux](https://www.linux.org)를 선택하고 Canonical, SUSE 및 Red Hat과 같은 상용 고객을 지원하는 회사뿐만 아니라 대규모 사용자 커뮤니티로부터 우수한 지원을받을 수 있습니다.
+
+
+
+Android 휴대 전화, 디지털 저장 장치, 개인용 비디오 녹화기, 카메라, 웨어러블 등과 같이 사용자가 소유하고있는 대부분의 장치에서도 [Linux](https://www.linux.org)가 실행됩니다. 귀하의 차량에도 리눅스가 실행되고 있습니다.
+
+
+
+두번째 예로는 LibreOffice를 들 수 있다. LibreOffice는 MS Office와 같은 오피스 프로그램으로 다양한 문서 작성을 돕는 프로그램이다.
 
