--- a/c624-d508-c18c-c2a4-c758-c7a52c-b2e8-c810.md
+++ b/c624-d508-c18c-c2a4-c758-c7a52c-b2e8-c810.md
@@ -1,36 +1,2 @@
-# 2. 오픈소스의 장점과 단점
-
-오픈소스는 양날의 검과 같다고 할수 있다. 장점이 있는 한편 반대로 단점이 있는 면이 존재한다. 따라서 이번 글에서는 오픈소스의 여러가지 장점과 단점에 대해 간단히 설명하려고 한다.
-
-### 오픈소스의 장점
-
-* 무료이거나 또는 저렴하다
-
-돈을 지불하며 이용하고 있는 독점적인 소프트웨어 패키지의 오픈 소스 버전을 찾는 것은 기업에게 이익이 될 수 있다. 값 비싼 라이센스를 이용하지 않는 운영은 특히 중소기업의 경우 모든 면에서 효과적일 것이다. 오픈 소스 소프트웨어는 매년 기업이 엄청난 돈을 절약할 수 있게 해준다.
-
-* 지속적인 개선이 가능하다
-
-오픈 소스 소프트웨어는 개발자가 버그를 수정하고 개조하고 추가 할 때마다 항상 진화한다. 개선에 참여하는 대규모 팀이 있으며 모든 사람이 소프트웨어 개선을 위한 주도권을 가져 지속적인 개선이 가능하다.
-
-* 사용자가 원하는 것을 할 수 있다
-
-라이센스에 대해 걱정할 필요없이 모든 시스템에 설치할 수 있을 뿐만 아니라 사용자의 요구에 맞출 수 있다. 원하는 경우 수정할 수도 있다.
-
-* 잠겨 있지 않다
-
-서로 호환되는 제품을 설계하는 공급 업체와 독점 시스템에 얽매이지 않는다. 또한 공급 업체의 로드맵에서 벗어나므로 필요한 기능이 추가될 때까지 기다릴 필요가 없다. 오픈 소스 소프트웨어는 독립적이기 때문에 활동적인 커뮤니티가 있는 한 개발자가 개발을 중단하거나 버리는 것은 중요하지 않다.
-
-### 오픈소스의 단점
-
-* 숨겨진 비용이 존재한다
-
-많은 기업들이 처음엔 오픈 소스 소프트웨어가 무료라는 사실에 매료됐지만 소프트웨어 배포 및 통합 비용과 지속적인 유지 보수 및 지원 비용 역시 고려해야 하기에 완전한 무료는 아니다.
-
-* 포기의 위험성이 존재한다
-
-주요 프로그래머가 관심을 잃거나 더 이상 프로젝트 작업을 할 시간이 없다면 개발이 중단될 수 있다. 만약 소프트웨어에 투자를 했다면 업데이트가 중단되었을 때 심각한 문제가 될 수 있다.
-
-* 보안의 위험성이 존재한다
-
-오픈 소스 소프트웨어는 개방되어 있다는 점에서 유익하지만 그것은 다른 사람들에게도 열려 있다는 것을 의미한다. 악의적인 사용자는 코드를 보고 취약점을 찾아 악용할 수도 있다. 회사가 이 취약성을 보완하기 위해 오픈 소스 코드를 분석하고 이를 완화하기 위한 조치를 취하지 않으면 오픈 소스 소프트웨어는 위험해질 수 있다.
+오픈소스의 장, 단
 
