--- a/b05d.md
+++ b/b05d.md
@@ -6,7 +6,7 @@
 
 이 글을 읽은 당신이 미래에도 끊임없이 여러사람들과 이어주고 강력하게 발전할 수 있는 오픈소스 세계에 발을 딛는 계기가 되었으면 하는 바람이다.
 
-\_-Team red-05\_
+**-Team red-05**
 
 &gt; 편집 후기
 
