--- a/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4/b9ac-b205-c2a4.md
+++ b/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4/b9ac-b205-c2a4.md
@@ -16,11 +16,7 @@
 
 ![](/assets/토르발스.png)
 
-\[ [https://ko.wikipedia.org/wiki/리누스\_토르발스](https://ko.wikipedia.org/wiki/리누스_토르발스) \]
+**자비로운종신독재자**\(BDFL, Benevolent Dictator for Life\)란 소수의 오픈소스 소프트웨어 개발 리더에게 부여되는 칭호이다. 주로 커뮤니티 내에서 논쟁이 있을때 최종적으로 결론을 내려줄 수 있는, 프로젝트 창시자인 경우가 많다.
 
-\[ [http://codedragon.tistory.com/2893](http://codedragon.tistory.com/2893) \]
 
-**자비로운종신독재자**\(BDFL, Benevolent Dictator for Life\)란 소수의 [오픈소스 소프트웨어 개발](https://ko.wikipedia.org/w/index.php?title=오픈_소스_소프트웨어_개발&action=edit&redlink=1) 리더에게 부여되는 칭호이다. 주로 커뮤니티 내에서 논쟁이 있을때 최종적으로 결론을 내려줄 수 있는, 프로젝트 창시자인 경우가 많다.
-
-\[ [https://ko.wikipedia.org/wiki/자비로운\_종신독재자](https://ko.wikipedia.org/wiki/자비로운_종신독재자) \]
 
