--- a/b05d.md
+++ b/b05d.md
@@ -20,3 +20,4 @@
 
 손건호: 오픈소스라는 것을 처음 접해보고 사용하려니 어디서부터 시작해야할지 몰랐었다. 이번 책자만들기를 통해 오픈소스에 점점 흥미를 붙일 수 있었고 책자를 만들때 처럼 코드를 서로 수정할 수 있다면 더 효율적인 코딩을 할 수 있겠다라고 생각했다. 앞으로도 오픈소스를 적극 활용하여 코드를 잘 관리할 수 있도록 해야겠다고 다짐했다.
 
+남윤재: 깃북을 사용하면서 깃과 깃허브에 대해 더 자세히 알게 되었다. 생소하기만 했던 오픈소스는 이번 과제를 통해 더이상 생소하지 않고 조금은 익숙하게 다가왔다. 또한 깃북을 사용하기위해 markdown이나 html을 공부하는 계기가 되었다.
