--- a/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4/c720-b2c9-c2a4.md
+++ b/c624-d508-c18c-c2a4-c758-c5ed-c0ac/c624-d508-c18c-c2a4-b97c-b9cc-b4e0-c0ac-b78c-b4e4/c720-b2c9-c2a4.md
@@ -16,6 +16,8 @@
 
 **Dennis Ritchie\(데니스 리치\)**\(오\)
 
+-1941년 태생 미국 프로그래머
+
 -켄 톰슨 등과 함께 최초의 유닉스 시스템 개발
 
 -1971년 최초의 〈Unix Programmer's Manual〉의 저자
@@ -25,8 +27,6 @@
 -켄 톰슨과 함께 튜링상 수상
 
 -매킨토시 OS, ios는 유닉스 기반으로 데니스 리치의 업적에 기반함
-
-
 
 **튜링 상**\(Turing Award\)은ACM에서컴퓨터 과학분야에 업적을 남긴 사람에게 매년 시상하는 상이다. "컴퓨터 과학의 노벨상"이라고도 불린다. 영국의 수학자이며 현대 전산학의 아버지라 할 수 있는앨런 튜링의 이름을 땄다. 현재는인텔사에서 후원하고 있으며 10만 달러의 상금이 부상으로 주어진다.ACM은 지난 2007년 6월 26일,구글이 인텔과 함께 튜링상의 공동 후원을 맡기로 하였다고 발표했다. 두 회사는 총 25만 달러의 상금을 각각 12만5천 달러씩 분담하기로 하였다.
 
