--- a/b05d.md
+++ b/b05d.md
@@ -8,8 +8,6 @@
 
 **-Team red-05**
 
-
-
 > 편집 후기
 
 이하영: 막연하게만 알고 있던 오픈소스라는 개념을 잘 알게 되었고, 이것이 얼마나 많은 사람들에 의해 성장해 왔는지 알 수 있는 좋은 기회였다. 앞으로 오픈소스를 직접 경험하게 될텐데 그 전에 공부할 수 있어서 좋았다.
@@ -21,3 +19,6 @@
 손건호: 오픈소스라는 것을 처음 접해보고 사용하려니 어디서부터 시작해야할지 몰랐었다. 이번 책자만들기를 통해 오픈소스에 점점 흥미를 붙일 수 있었고 책자를 만들때 처럼 코드를 서로 수정할 수 있다면 더 효율적인 코딩을 할 수 있겠다라고 생각했다. 앞으로도 오픈소스를 적극 활용하여 코드를 잘 관리할 수 있도록 해야겠다고 다짐했다.
 
 남윤재: 깃북을 사용하면서 깃과 깃허브에 대해 더 자세히 알게 되었다. 생소하기만 했던 오픈소스는 이번 과제를 통해 더이상 생소하지 않고 조금은 익숙하게 다가왔다. 또한 깃북을 사용하기위해 markdown이나 html을 공부하는 계기가 되었다.
+
+김도현: 여러가지 조사를 해보면서 오픈소스에 대해 알게된 좋은 기회라 생각한다. 개인적으로 오픈소스의 자유로운 코드 공유가 좋은 취지였다고 느꼈다. 그 사람들의 노고가 지금의 우리를 있을 수 있게 만든것 같다.
+
